--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your Page Title</title>
+  <!-- Example: Link to your .woff font -->
+  <style>
+    @font-face {
+      font-family: 'MyCustomFont';
+      src: url('fonts/myfont.woff') format('woff');
+      font-weight: normal;
+      font-style: normal;
+    }
+    body {
+      font-family: 'MyCustomFont', Arial, sans-serif;
+      margin: 2em;
+      background: #f9f9f9;
+      color: #222;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Welcome to My Website</h1>
+  </header>
+  <main>
+    <p>This is a sample page using a custom .woff font.</p>
+  </main>
+  <footer>
+    <small>&copy; 2025 Your Name</small>
+  </footer>
+</body>
+</html>
 
