--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 
         <main class="main-content">
             <canvas id="preview-canvas"></canvas>
+            <div id="data-view-container" style="display: none;"></div>
         </main>
     </div>
 
