--- a/DN2/index_dn2.html
+++ b/DN2/index_dn2.html
@@ -123,6 +123,7 @@
                                 <h4 class="control-group-label">Rendering Options</h4>
                                 <div class="checkbox-grid">
                                     <label><input type="checkbox" id="actors-always-on-top"> Actors on Top</label>
+                                    <label><input type="checkbox" id="hide-bg-grid"> Hide BG Grid</label>
                                 </div>
                             </div>
 
