Update Launcher Title
Changed the name of the launcher page.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Retro Projects Launcher</title>
+    <title>DN1 and DN2 Asset Viewer</title>
     <style>
         body {
             background-color: #000000;
