Choose Files becomes Choose Folder
Simple button label fix.

--- a/DN2/index_dn2.html
+++ b/DN2/index_dn2.html
@@ -24,7 +24,7 @@
             <input type="file" id="folder-input" webkitdirectory multiple style="display: none;" />
             <input type="file" id="palette-input" accept="image/png" style="display: none;" />
             
-            <label for="folder-input" class="btn-file-select">Choose Files</label>
+            <label for="folder-input" class="btn-file-select">Choose Folder</label>
             
             <span id="file-input-status">No folder selected</span>
         </div>
